# block

./: .clangd  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  block  build.sh  run.sh  shell.nix
.github/workflows/: makefile.yml
docs/: Physics.md  Shaders.md
include/: FastNoiseLite.h  block.hpp  chunk.hpp  config.hpp  entity.hpp  geometry.hpp  helper.hpp  model.hpp  physics.hpp  preferences.hpp  renderer.hpp  save.hpp  shader.h  shader.hpp  ui.hpp  util.hpp  worldgen.hpp
include/components/: component.hpp
include/components/entity/: camera.hpp
include/mesh/: mesh.hpp  obj_file.hpp
res/shaders/: basic.f.glsl  basic.v.glsl  cube.f.glsl  cube.v.glsl  entity.f.glsl  entity.v.glsl  shade.glsl  triangle.f.glsl  triangle.v.glsl  triangle.vs.glsl
res/shaders/compute/: FastNoiseLite.glsl  compute.v.glsl  height.glsl
shaders/: fs.glsl  triangle.fs.glsl  vs.glsl
src/: block.cpp  chunk.cpp  geometry.rs  main.cpp  main.rs  mesh.cpp  model.cpp  shader.cpp  shader.rs  util.cpp
src/chunk/: block.rs  chunk.rs  mod.rs
